fix(calendar): missing nav spacing
https://github.com/telerik/kendo-themes/issues/1997

--- a/packages/material/scss/calendar/_variables.scss
+++ b/packages/material/scss/calendar/_variables.scss
@@ -63,6 +63,8 @@ $calendar-navigation-bg: true-mix( $calendar-text, $calendar-bg, 3) !default;
 $calendar-navigation-text: $calendar-text !default;
 $calendar-navigation-border: $calendar-border !default;
 
+$calendar-today-nav-margin-x: 8px !default;
+$calendar-today-nav-margin-y: 0 !default;
 $calendar-today-nav-text: $link-text !default;
 $calendar-today-nav-hovered-text: $link-hover-text !default;
 
